--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/ppc_networking_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/ppc_networking_notes.html
@@ -4,47 +4,61 @@
         <script src="/head.js" defer></script>
     </head>
 
-<body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+    <body>
+        <div class="containter"> 
+            <div class="notes-content-wrapper">
+                <div class="notes-content-header" style="background-image:url(/images/matnote5.jpg)" title="printing background">
+                    <h1 style="color:white"><u><b>Production, planning and control (PPC) networking</b></u></h1>
                 </div>
+    
+                <div class="notes-content">
+                    <div class="notes-content-intro">
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                        <h3 id="PPCNetworking"><b><u>Production, Planning, and Control (PPC) Networking:</b></u></h3>
+                        <p><b>What is PPC?</b> PPC systems are the backbone of efficient manufacturing. They focus on ensuring that every part of the process, from materials to machines to people, is properly coordinated. This means products get made on time, with minimal waste, and everything runs smoothly from start to finish.</p>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+                        <p><b>Key Aspects of PPC:</b></p>
+                        <ul>
+                            <li><b>Availability of Materials:</b> PPC tracks inventory to make sure all the raw materials needed are always on hand. It’s about having what you need when you need it, so production doesn’t stop because of missing materials.</li>
+                            <li><b>Scheduling Machines & People:</b> Ensuring machines are used efficiently and workers are assigned to the right tasks at the right time is crucial. PPC systems schedule everything to keep production flowing without unnecessary downtime or bottlenecks.</li>
+                            <li><b>Coordinating Suppliers & Customers:</b> PPC networks ensure that suppliers deliver materials when needed, and production schedules align with customer demand. This keeps things in balance, avoiding delays and keeping everyone happy.</li>
+                        </ul>
 
+                        <p><b>How PPC Works:</b></p>
+                        <ul>
+                            <ol>
+                                <li><b>Material Requirements Planning (MRP):</b> The first step is figuring out exactly what materials are needed for production, and when. PPC uses MRP to prevent overstocking or running out of materials.</li>
+                                <li><b>Scheduling & Capacity Planning:</b> This is all about smart scheduling. PPC ensures that machines are being used efficiently, and workers are assigned tasks that match their skills, all while keeping production on track.</li>
+                                <li><b>Production Control:</b> As production moves forward, PPC tracks progress. It’s about keeping an eye on the bigger picture and making adjustments when things don’t go as planned, so the end product is delivered on time.</li>
+                            </ol>
+                        </p>
+
+                        <p><b>Why PPC Matters:</b></p>
+                        <ul>
+                            <li>Optimises resources like machines and workers, so you’re never wasting time or energy.</li>
+                            <li>Prevents inventory issues, meaning less waste and more efficient production.</li>
+                            <li>Improves customer satisfaction by ensuring products are delivered on time and in full.</li>
+                            <li>Helps to build strong, reliable supply chains, keeping everything running smoothly from start to finish.</li>
+                        </ul>
+
+                        <h3><b>Common Applications: </b>Manufacturing industries, automotive production, electronics, and any sector where efficiency and timely delivery are key.</h3>
+
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="\documents\Q&A\processes_techniques_special_tools_exercises\&A.pdf"> Questions</a>
+                </div> 
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+            
+            </div>
+        </div>
+
+        <script src="/footer.js"></script>
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
