--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/product_development_and_improvement_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/product_development_and_improvement_notes.html
@@ -4,47 +4,69 @@
         <script src="/head.js" defer></script>
     </head>
 
-<body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+    <body>
+        <div class="containter"> 
+            <div class="notes-content-wrapper">
+                <div class="notes-content-header" style="background-image:url(/images/matnote5.jpg)" title="printing background">
+                    <h1 style="color:white"><u><b>Product development and improvement</b></u></h1>
                 </div>
+    
+                <div class="notes-content">
+                    <div class="notes-content-intro">
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                        <h3 id="ProductDevelopment"><b><u>Product Development and Improvement:</b></u></h3>
+                            <p><b>What is Product Development?</b> Product development is about turning ideas into real, tangible products that work effectively and meet the needs of users. It involves everything from design and testing to manufacturing and improving existing products. The key is to understand what makes a product work well, how it can be improved, and how to make sure it's made to the highest standards.</p>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+                            <p><b>Key Areas in Product Development:</b></p>
+                            <ul>
+                                <li><b>Designing & Developing to Meet Specifications:</b> Every product starts with a clear goal. When developing a product, it’s important to meet the specification criteria — things like size, material, function, and features. This is the foundation for any new design.</li>
+                                <li><b>Fitness for Purpose:</b> A product has to do what it’s supposed to do — and do it well. Whether it’s a kitchen gadget or a piece of tech, the product must meet its intended use and perform reliably.</li>
+                                <li><b>Accuracy of Production:</b> Manufacturing a product accurately is key to quality control. Every part needs to fit together perfectly, and dimensions must be precise to avoid defects and ensure the final product works properly.</li>
+                                <li><b>Critical Assessment for New Designs:</b> By looking at how existing products work (or don’t work), we can identify areas for improvement. This assessment helps in developing new ideas or redesigning products that better meet customer needs.</li>
+                            </ul>
 
+                            <p><b>Developing New Products:</b></p>
+                            <ul>
+                                <ol>
+                                    <li><b>Assessing Existing Products:</b> To improve on something, you first need to understand it. Critically evaluating current products gives insight into what works, what doesn’t, and where there’s room for innovation.</li>
+                                    <li><b>Creating New Design Proposals:</b> Once you’ve identified areas for improvement, the next step is developing new design ideas. This is where creativity and problem-solving come into play, producing something that addresses a specific gap or improves on what’s already out there.</li>
+                                    <li><b>Working with Materials:</b> Whether it’s wood, plastic, metal, or fabric, working with different materials allows you to explore a wide range of creative possibilities. Understanding material properties is crucial for producing products that are both functional and manufacturable.</li>
+                                    <li><b>Considering the Market:</b> A product needs to not only work well but also appeal to the target audience. This means understanding what customers want, how they’ll use the product, and how to make it both practical and desirable.</li>
+                                </ol>
+                            </p>
+
+                            <p><b>Designing with Purpose:</b></p>
+                            <ul>
+                                <li><b>Aesthetics:</b> The look and feel of a product matter. A great design isn’t just about function; it’s also about appealing to the senses and aligning with current design trends.</li>
+                                <li><b>Ergonomics:</b> How does the product fit into the user’s life? Ergonomics ensures that the product is comfortable, intuitive to use, and doesn’t cause strain or discomfort over time.</li>
+                                <li><b>Anthropometrics:</b> It’s not just about making something “look good.” It’s about making sure that the product fits the human body — considering factors like size, shape, and user interaction to create a product that works for everyone.</li>
+                            </ul>
+
+                            <h3><b>Why It Matters:</b></h3>
+                            <ul>
+                                <li>Helps create products that solve real problems and improve people’s lives.</li>
+                                <li>Leads to innovative designs that stand out in the market.</li>
+                                <li>Ensures products are made efficiently and accurately, saving time and money during production.</li>
+                                <li>Fosters creativity and original thinking, crucial for standing out in a competitive market.</li>
+                            </ul>
+
+                            <h3><b>Applications: </b>Consumer products, technology, industrial design, furniture, packaging, and any field requiring new product ideas and improvements.</h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="\documents\Q&A\processes_techniques_special_tools_exercises\&A.pdf"> Questions</a>
+                </div> 
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+            
+            </div>
+        </div>
+
+        <script src="/footer.js"></script>
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
