--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/aqa_gcse_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/aqa_gcse_notes.html
@@ -25,7 +25,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="notes_examboard\aqa_gcse_notes\aqa_gcse_notes.html">AQA GCSE Notes</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_core_tech_gcse_notes.html">Section A: Core technical principles</a>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="notes_topics/.html">Edexcel GCSE Notes (Coming soon)</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_spec_tech_prin_gcse_notes.html">Section B: Specialist technical principles</a>
                         </div>
                     </div>
                 </div>
@@ -45,10 +45,11 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="notes_topics/.html">OCR GCSE Notes (Coming soon)</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_design_make_gcse_notes.html">Section C: Designing and making principles</a>
                         </div>
                     </div>
-                </div>                
+                </div>
+                
             </div>
         </div>
 
